Avoid some unneeded variants
These are only used the once.

--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -2053,7 +2053,7 @@
 %     \keys_set_known:nnN, \keys_set_known:nVN,
 %     \keys_set_known:nvN, \keys_set_known:noN
 %   }
-% \begin{macro}{\@@_set_known:nnnN, \@@_set_known:onnN}
+% \begin{macro}{\@@_set_known:nnnN}
 % \begin{macro}
 %   {
 %     \keys_set_known:nn, \keys_set_known:nV,
@@ -2066,7 +2066,7 @@
 %   operation to set the \texttt{clist} here!
 %    \begin{macrocode}
 \cs_new_protected:Npn \keys_set_known:nnN
-  { \@@_set_known:onnN \l_@@_unused_clist }
+  { \exp_args:No \@@_set_known:nnnN \l_@@_unused_clist }
 \cs_generate_variant:Nn \keys_set_known:nnN { nV , nv , no }
 \cs_new_protected:Npn \@@_set_known:nnnN #1#2#3#4
   {
@@ -2075,7 +2075,6 @@
     \tl_set:Nx #4 { \exp_not:o { \l_@@_unused_clist } }
     \tl_set:Nn \l_@@_unused_clist {#1}
   }
-\cs_generate_variant:Nn \@@_set_known:nnnN { o }
 \cs_new_protected:Npn \keys_set_known:nn #1#2
   {
     \use:x
@@ -2103,7 +2102,7 @@
 %     \keys_set_filter:nnnN, \keys_set_filter:nnVN, \keys_set_filter:nnvN,
 %       \keys_set_filter:nnoN
 %   }
-% \begin{macro}{\@@_set_filter:nnnnN, \@@_set_filter:onnnN}
+% \begin{macro}{\@@_set_filter:nnnnN}
 % \begin{macro}
 %   {
 %     \keys_set_filter:nnn, \keys_set_filter:nnV, \keys_set_filter:nnv,
@@ -2115,14 +2114,14 @@
 %       \keys_set_groups:nno
 %   }
 %  \begin{macro}{\@@_set_selective:nnn}
-%  \begin{macro}{\@@_set_selective:nnnn, \@@_set_selective:onnn}
+%  \begin{macro}{\@@_set_selective:nnnn}
 %   The idea of setting keys in a selective manner again uses flags
 %   wrapped around the basic code. The comments on \cs{keys_set_known:nnN}
 %   also apply here. We have a bit more shuffling to do to keep everything
 %   nestable.
 %    \begin{macrocode}
 \cs_new_protected:Npn \keys_set_filter:nnnN
-  {  \@@_set_filter:onnnN \l_@@_unused_clist }
+  { \exp_args:No \@@_set_filter:nnnnN \l_@@_unused_clist }
 \cs_generate_variant:Nn \keys_set_filter:nnnN { nnV , nnv , nno }
 \cs_new_protected:Npn \@@_set_filter:nnnnN #1#2#3#4#5
   {
@@ -2131,7 +2130,6 @@
     \tl_set:Nx #5 { \exp_not:o { \l_@@_unused_clist } }
     \tl_set:Nn \l_@@_unused_clist {#1}
   }
-\cs_generate_variant:Nn \@@_set_filter:nnnnN { o }
 \cs_new_protected:Npn \keys_set_filter:nnn #1#2#3
   {
     \use:x
@@ -2167,14 +2165,13 @@
   }
 \cs_generate_variant:Nn \keys_set_groups:nnn { nnV , nnv , nno }
 \cs_new_protected:Npn \@@_set_selective:nnn
-  { \@@_set_selective:onnn \l_@@_selective_seq }
+  { \exp_args:No \@@_set_selective:nnnn \l_@@_selective_seq }
 \cs_new_protected:Npn \@@_set_selective:nnnn #1#2#3#4
   {
     \seq_set_from_clist:Nn \l_@@_selective_seq {#3}
     \@@_set:nn {#2} {#4}
     \tl_set:Nn \l_@@_selective_seq {#1}
   }
-\cs_generate_variant:Nn \@@_set_selective:nnnn { o }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
