Enable key inheritance for defaults (fixes #504)

--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -2364,6 +2364,7 @@
 % \end{macro}
 %
 % \begin{macro}{\@@_value_or_default:n}
+% \begin{macro}{\@@_default_inherit:}
 %   If a value is given, return it as |#1|, otherwise send a default if
 %   available.
 %    \begin{macrocode}
@@ -2377,11 +2378,32 @@
               \l_keys_value_tl
               { \c_@@_default_root_tl \l_keys_path_tl }
           }
-          { \tl_clear:N \l_keys_value_tl }
+          {
+            \tl_clear:N \l_keys_value_tl
+            \cs_if_exist:cT
+              { \c_@@_inherit_root_tl \@@_parent:o \l_keys_path_tl }
+              { \@@_default_inherit: }
+          }
       }
       { \tl_set:Nn \l_keys_value_tl {#1} }
   }
+\cs_new_protected:Npn \@@_default_inherit:
+  {
+    \clist_map_inline:cn
+      { \c_@@_inherit_root_tl \@@_parent:o \l_keys_path_tl }
+      {
+        \cs_if_exist:cT
+          { \c_@@_default_root_tl ##1 / \l_keys_key_tl }
+          {
+            \tl_set_eq:Nc
+              \l_keys_value_tl
+              { \c_@@_default_root_tl ##1 / \l_keys_key_tl }
+            \clist_map_break:
+          }
+      }
+  }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 %
 % \begin{macro}{\@@_execute:, \@@_execute_inherit:, \@@_execute_unknown:}
@@ -2567,7 +2589,10 @@
 \cs_new:Npn \@@_parent:w #1 / #2 / #3 \q_stop #4
   {
     \tl_if_blank:nTF {#2}
-      { \use_none:n #4 }
+      {
+        \tl_if_blank:nF {#4}
+          { \use_none:n #4 }
+      }
       {
         \@@_parent:w #2 / #3 \q_stop { #4 / #1 }
       }
