`.prop_(g)put:N` key property (fixes #444)

--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -382,6 +382,17 @@
 %   Choices are discussed in detail in section~\ref{sec:l3keys:choice}.
 % \end{function}
 %
+% \begin{function}[added = 2019-01-31]
+%   {.prop_put:N, .prop_put:c, .prop_gput:N, .prop_gput:c}
+%   \begin{syntax}
+%     \meta{key} .prop_put:N = \meta{property list}
+%   \end{syntax}
+%   Defines \meta{key} to put the \meta{value} onto the \meta{property list}
+%   stored under the \meta{key}.
+%   If the variable does not exist, it
+%   is created globally at the point that the key is set up.
+% \end{function}
+%
 % \begin{function}{.skip_set:N, .skip_set:c, .skip_gset:N, .skip_gset:c}
 %   \begin{syntax}
 %     \meta{key} .skip_set:N = \meta{skip}
@@ -1272,10 +1283,12 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}{\l_@@_tmp_bool}
+% \begin{variable}{\l_@@_tmp_bool, \l_@@_tmpa_tl, \l_@@_tmpb_tl}
 %   Scratch space.
 %    \begin{macrocode}
 \bool_new:N \l_@@_tmp_bool
+\tl_new:N \l_@@_tmpa_tl
+\tl_new:N \l_@@_tmpb_tl
 %    \end{macrocode}
 % \end{variable}
 %
@@ -1641,6 +1654,28 @@
 % \end{macro}
 % \end{macro}
 %
+% \begin{macro}{\@@_prop_put:Nn, \@@_prop_put:cn}
+%   Much the same as other variables, but needs a dedicated auxiliary.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_prop_put:Nn #1#2
+  {
+    \prop_if_exist:NF #1 { \prop_new:N #1 }
+    \exp_after:wN \@@_find_key_module:NNw
+      \exp_after:wN \l_@@_tmpa_tl
+      \exp_after:wN \l_@@_tmpb_tl
+      \l_keys_path_tl / \q_stop
+    \@@_cmd_set:nx { \l_keys_path_tl }
+      {
+        \exp_not:c { prop_ #2 put:Nnn }
+        \exp_not:N #1
+        { \l_@@_tmpb_tl }
+        \exp_not:n { {##1} }
+      }
+  }
+\cs_generate_variant:Nn \@@_prop_put:Nn { c }
+%    \end{macrocode}
+% \end{macro}
+%
 % \begin{macro}{\@@_undefine:}
 %   Undefining a key has to be done without \cs{cs_undefine:c} as that
 %   function acts globally.
@@ -1962,6 +1997,20 @@
 % \end{macro}
 % \end{macro}
 %
+% \begin{macro}{.prop_put:N, .prop_put:c, .prop_gput:N, .prop_gput:c}
+%   Setting a variable is very easy: just pass the data along.
+%    \begin{macrocode}
+\cs_new_protected:cpn { \c_@@_props_root_tl .prop_put:N } #1
+  { \@@_prop_put:Nn #1 { } }
+\cs_new_protected:cpn { \c_@@_props_root_tl .prop_put:c } #1
+  { \@@_prop_put:cn {#1} { } }
+\cs_new_protected:cpn { \c_@@_props_root_tl .prop_gput:N } #1
+  { \@@_prop_put:Nn #1 { g } }
+\cs_new_protected:cpn { \c_@@_props_root_tl .prop_gput:c } #1
+  { \@@_prop_put:cn {#1} { g } }
+%    \end{macrocode}
+% \end{macro}
+%
 % \begin{macro}{.skip_set:N, .skip_set:c}
 % \begin{macro}{.skip_gset:N, .skip_gset:c}
 %   Setting a variable is very easy: just pass the data along.
@@ -2251,7 +2300,7 @@
 %
 % \begin{macro}{\@@_set_keyval:n, \@@_set_keyval:nn}
 % \begin{macro}{\@@_set_keyval:nnn, \@@_set_keyval:onn}
-% \begin{macro}{\@@_find_key_module:w}
+% \begin{macro}{\@@_find_key_module:NNw}
 % \begin{macro}{\@@_set_selective:}
 %   A shared system once again. First, set the current path and add a
 %   default if needed. There are then checks to see if the a value is
@@ -2284,7 +2333,10 @@
         \@@_trim_spaces:n {#2}
       }
     \tl_clear:N \l_@@_module_tl
-    \exp_after:wN \@@_find_key_module:w \l_keys_path_tl / \q_stop
+    \exp_after:wN \@@_find_key_module:NNw
+      \exp_after:wN \l_@@_module_tl
+      \exp_after:wN \l_keys_key_tl
+      \l_keys_path_tl / \q_stop
     \@@_value_or_default:n {#3}
     \bool_if:NTF \l_@@_selective_bool
       { \@@_set_selective: }
@@ -2292,17 +2344,17 @@
     \tl_set:Nn \l_@@_module_tl {#1}
   }
 \cs_generate_variant:Nn \@@_set_keyval:nnn { o }
-\cs_new_protected:Npn \@@_find_key_module:w #1 / #2 \q_stop
+\cs_new_protected:Npn \@@_find_key_module:NNw #1#2#3 / #4 \q_stop
   {
-    \tl_if_blank:nTF {#2}
-      { \tl_set:Nn \l_keys_key_tl {#1} }
+    \tl_if_blank:nTF {#4}
+      { \tl_set:Nn #2 {#3} }
       {
-        \tl_put_right:Nx \l_@@_module_tl
+        \tl_put_right:Nx #1
           {
-            \tl_if_empty:NF \l_@@_module_tl { / }
-            #1
+            \tl_if_empty:NF #1 { / }
+            #3
           }
-        \@@_find_key_module:w #2 \q_stop
+        \@@_find_key_module:NNw #1#2 #4 \q_stop
       }
   }
 %    \end{macrocode}
