Extend \exp_args_generate:n for e-type

--- a/l3kernel/l3expan.dtx
+++ b/l3kernel/l3expan.dtx
@@ -2682,7 +2682,7 @@
       {
         \str_map_inline:nn {##1}
           {
-            \str_if_in:nnF { NnpcofVvx } {####1}
+            \str_if_in:nnF { NnpcofeVvx } {####1}
               {
                 \__kernel_msg_error:nnnn { kernel } { invalid-exp-args }
                   {####1} {##1}
