--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -634,6 +634,46 @@
 %   conversely: sets it to the inverse of its current value.
 % \end{function}
 %
+% \begin{function}[added = 2019-02-10, EXP, noTF]{\bool_case:n}
+%   \begin{syntax}
+%     \cs{bool_case:nTF} \\
+%     ~~|{| \\
+%     ~~~~\Arg{boolexpr case_1} \Arg{code case_1} \\
+%     ~~~~\Arg{boolexpr case_2} \Arg{code case_2} \\
+%     ~~~~\ldots \\
+%     ~~~~\Arg{boolexpr case_n} \Arg{code case_n} \\
+%     ~~|}| \\
+%     ~~\Arg{true code}
+%     ~~\Arg{false code}
+%   \end{syntax}
+%   This function evaluates in turn each of the
+%   \meta{boolean expression cases}. If it is true then the
+%   associated \meta{code} is left in the input stream
+%   and other cases are discarded. If any of the
+%   cases is true, the \meta{true code} is also inserted into the
+%   input stream (after the code for the appropriate case), while if none
+%   match then the \meta{false code} is inserted. The function
+%   \cs{bool_case:n}, which does nothing if there is no match, is also
+%   available. For example
+%   \begin{verbatim}
+%     \bool_case:nF
+%       {
+%         { \dim_compare_p:n { \l__mypkg_wd_dim <= 10pt } }
+%             { Fits }
+%         { \int_compare_p:n { \l__mypkg_total_int >= 10 } }
+%             { Many }
+%         { \l__mypkg_special_bool }
+%             { Special }
+%       }
+%       { No idea! }
+%   \end{verbatim}
+%   leaves \enquote{\texttt{Fits}} or \enquote{\texttt{Many}} or
+%   \enquote{\texttt{Special}} or \enquote{\texttt{No idea!}} in the
+%   input stream, in a way similar to some other language's
+%   \enquote{\texttt{if} \ldots\ \texttt{elseif} \ldots\ \texttt{elseif} \ldots\
+%   \texttt{else} \ldots}.
+% \end{function}
+%
 % \section{Additions to \pkg{l3prop}}
 %
 % \begin{function}[EXP]{\prop_count:N, \prop_count:c}
@@ -2484,6 +2524,10 @@
 %
 % \subsection{Additions to \pkg{l3prg}}
 %
+%    \begin{macrocode}
+%<@@=bool>
+%    \end{macrocode}
+%
 % \begin{macro}[added = 2017-11-28]{\bool_const:Nn, \bool_const:cn}
 %   A merger between \cs{tl_const:Nn} and \cs{bool_set:Nn}.
 %    \begin{macrocode}
@@ -2508,6 +2552,32 @@
   { \bool_if:NTF #1 { \bool_gset_false:N } { \bool_gset_true:N } #1 }
 \cs_generate_variant:Nn \bool_gset_inverse:N { c }
 %    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[EXP, noTF]{\bool_case:n}
+% \begin{macro}{\@@_case:nTF}
+% \begin{macro}{\@@_case:w, \@@_case_end:nw}
+%   For boolean cases the overall idea is the same as for
+%   \cs{tl_case:nn(TF)} as described in \pkg{l3tl}, but with one fewer
+%   argument to track.
+%    \begin{macrocode}
+\cs_new:Npn \bool_case:nTF { \exp:w \@@_case:nTF }
+\cs_new:Npn \bool_case:nT #1#2 { \exp:w \@@_case:nTF {#1} {#2} { } }
+\cs_new:Npn \bool_case:nF #1 { \exp:w \@@_case:nTF {#1} { } }
+\cs_new:Npn \bool_case:n #1 { \exp:w \@@_case:nTF {#1} { } { } }
+\cs_new:Npn \@@_case:nTF #1#2#3
+  { \@@_case:w #1 \c_true_bool { } \q_mark {#2} \q_mark {#3} \q_stop }
+\cs_new:Npn \@@_case:w #1#2
+  {
+    \bool_if:nTF {#1}
+      { \@@_case_end:nw {#2} }
+      { \@@_case:w }
+  }
+\cs_new:Npn \@@_case_end:nw #1#2#3 \q_mark #4#5 \q_stop
+  { \exp_end: #1 #4 }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
 % \end{macro}
 %
 % \subsection{Additions to \pkg{l3prop}}
