More nested calls removes

--- a/l3experimental/l3draw/l3draw-paths.dtx
+++ b/l3experimental/l3draw/l3draw-paths.dtx
@@ -254,15 +254,12 @@
   }
 \cs_new_protected:Npn \draw_path_curveto:nnn #1#2#3
   {
-    \@@_point_process:nnn
+    \@@_point_process:nnnn
       {
-        \@@_point_process:nn
-          {
-            \@@_path_mark_corner:
-            \@@_path_curveto:nnnnnn
-          }
-          { \draw_point_transform:n {#1} }
+        \@@_path_mark_corner:
+        \@@_path_curveto:nnnnnn
       }
+      { \draw_point_transform:n {#1} }
       { \draw_point_transform:n {#2} }
       { \draw_point_transform:n {#3} }
   }
@@ -303,16 +300,12 @@
   { \@@_point_process:nn { \@@_path_lineto:nn } {#1} }
 \cs_new_protected:Npn \draw_path_canvas_curveto:nnn #1#2#3
   {
-    \@@_point_process:nnn
+    \@@_point_process:nnnn
       {
-        \@@_point_process:nn
-          {
-            \@@_path_mark_corner:
-            \@@_path_curveto:nnnnnn
-          }
-          {#1}
+        \@@_path_mark_corner:
+        \@@_path_curveto:nnnnnn
       }
-      {#2} {#3}
+      {#1} {#2} {#3}
   }
 %    \end{macrocode}
 % \end{macro}
@@ -514,14 +507,11 @@
         \@@_point_transform_noshift:n
           { \draw_point_polar:nnn { #1 #4 90 } {#7} {#8} }
       }
-    \@@_point_process:nn
+    \@@_point_process:nnn
+      { \@@_path_arc_auxiv:nnnn }
       {
-        \@@_point_process:nn
-          { \@@_path_arc_auxiv:nnnn }
-          {
-            \draw_point_transform:n
-              { \draw_point_polar:nnn {#1} {#5} {#6} }
-          }
+        \draw_point_transform:n
+          { \draw_point_polar:nnn {#1} {#5} {#6} }
       }
       {
         \draw_point_transform:n
@@ -624,12 +614,9 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \draw_path_ellipse:nnn #1#2#3
   {
-    \@@_point_process:nnn
-      {
-        \@@_point_process:nn
-          { \@@_path_ellipse:nnnnnn }
-          { \draw_point_transform:n {#1} }
-      }
+    \@@_point_process:nnnn
+      { \@@_path_ellipse:nnnnnn }
+      { \draw_point_transform:n {#1} }
       { \@@_point_transform_noshift:n {#2} }
       { \@@_point_transform_noshift:n {#3} }
   }
