--- a/l3experimental/l3draw/l3draw-transforms.dtx
+++ b/l3experimental/l3draw/l3draw-transforms.dtx
@@ -293,9 +293,9 @@
 \cs_new_protected:Npn \draw_transform_yscale:n #1
   { \draw_transform_matrix_concat:nnnn { 1 } { 0 } { 0 } { #1 } }
 \cs_new_protected:Npn \draw_transform_xshift:n #1
-  { \draw_transform_shift_concat:n { #1 , 0 } }
+  { \draw_transform_shift_concat:n { #1 , 0pt } }
 \cs_new_protected:Npn \draw_transform_yshift:n #1
-  { \draw_transform_shift_concat:n { 0 , #1 } }
+  { \draw_transform_shift_concat:n { 0pt , #1 } }
 \cs_new_protected:Npn \draw_transform_xslant:n #1
   { \draw_transform_matrix_concat:nnnn { 1 } { 0 } { #1 } { 1 } }
 \cs_new_protected:Npn \draw_transform_yslant:n #1
