--- a/l3experimental/l3draw/l3draw-paths.dtx
+++ b/l3experimental/l3draw/l3draw-paths.dtx
@@ -718,10 +718,10 @@
   }
 \cs_new_protected:Npn \@@_path_rectangle_rounded:nnnn #1#2#3#4
   {
-    \draw_path_moveto:n { #1 + #3 , #2 + #4 }
-    \draw_path_lineto:n { #1 , #2 + #4 }
+    \draw_path_moveto:n { \draw_point:nn { #1 + #3 } { #2 + #4 } }
+    \draw_path_lineto:n { \draw_point:nn {#1} { #2 + #4 } }
     \draw_path_lineto:n { #1 , #2 }
-    \draw_path_lineto:n { #1 + #3 , #2 }
+    \draw_path_lineto:n { \draw_point:nn { #1 + #3 } {#2} }
     \draw_path_close:
     \draw_path_moveto:n { #1 , #2 }
   }
@@ -740,7 +740,7 @@
       {#1} {#2}
   }
 \cs_new_protected:Npn \@@_path_rectangle_corners:nnnnn #1#2#3#4#5
-  { \draw_path_rectangle:nn {#1} { #4 - #2 , #5 - #3 } }
+  { \draw_path_rectangle:nn {#1} { \draw_point:nn { #4 - #2 } { #5 - #3 } } }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
