--- a/l3experimental/l3draw/l3draw-points.dtx
+++ b/l3experimental/l3draw/l3draw-points.dtx
@@ -112,8 +112,7 @@
 \cs_new:Npn \@@_point_process:nn #1#2
   {
     \exp_args:Nf \@@_point_process_auxi:nn
-      { \@@_point_to_dim:n {#2} }
-      {#1}
+      {#2} {#1}
   }
 \cs_new:Npn \@@_point_process_auxi:nn #1#2
   { \@@_point_process_auxii:nw {#2} #1 \q_stop }
@@ -122,9 +121,7 @@
 \cs_new:Npn \@@_point_process:nnn #1#2#3
   {
     \exp_args:Nff \@@_point_process_auxiii:nnn
-      { \@@_point_to_dim:n {#2} }
-      { \@@_point_to_dim:n {#3} }
-      {#1}
+      {#2} {#3} {#1}
   }
 \cs_new:Npn \@@_point_process_auxiii:nnn #1#2#3
   { \@@_point_process_auxiv:nw {#3} #1 \q_mark #2 \q_stop }
@@ -133,10 +130,7 @@
 \cs_new:Npn \@@_point_process:nnnn #1#2#3#4
   {
     \exp_args:Nfff \@@_point_process_auxv:nnnn
-      { \@@_point_to_dim:n {#2} }
-      { \@@_point_to_dim:n {#3} }
-      { \@@_point_to_dim:n {#4} }
-      {#1}
+      {#2} {#3} {#4} {#1}
   }
 \cs_new:Npn \@@_point_process_auxv:nnnn #1#2#3#4
   { \@@_point_process_auxvi:nw {#4} #1 \q_mark #2 \q_mark #3 \q_stop }
@@ -146,11 +140,7 @@
 \cs_new:Npn \@@_point_process:nnnnn #1#2#3#4#5
   {
     \exp_args:Nffff \@@_point_process_auxvii:nnnnn
-      { \@@_point_to_dim:n {#2} }
-      { \@@_point_to_dim:n {#3} }
-      { \@@_point_to_dim:n {#4} }
-      { \@@_point_to_dim:n {#5} }
-      {#1}
+      {#2} {#3} {#4} {#5} {#1}
   }
 \cs_new:Npn \@@_point_process_auxvii:nnnnn #1#2#3#4#5
   {
@@ -525,7 +515,10 @@
         \@@_point_interpolate_distance:fnnnn
           { \fp_eval:n {#1} } {#3} {#4}
       }
-      { \draw_point_unit_vector:n { ( #2 ) - ( #3 , #4 ) } }
+      {
+        \draw_point_unit_vector:n
+          { \@@_point_to_dim:n { ( #2 ) - ( #3 , #4 ) } }
+      }
   }
 \cs_new:Npn \@@_point_interpolate_distance:nnnnn #1#2#3#4#5
   { \@@_point_to_dim:n { #2 + #1 * #4 , #3 + #1 * #5 } }
@@ -896,17 +889,13 @@
       {
         \@@_point_to_dim:n
           {
-            (
                 \l_@@_matrix_a_fp * #1
               + \l_@@_matrix_c_fp * #2
               + \l_@@_xshift_dim
-            )
             ,
-            (
                 \l_@@_matrix_b_fp * #1
               + \l_@@_matrix_d_fp * #2
               + \l_@@_yshift_dim
-            )
         }
       }
       {
