Defensive code against \time/\day/\month\/year issues

--- a/l3kernel/l3sys.dtx
+++ b/l3kernel/l3sys.dtx
@@ -170,8 +170,9 @@
 %     \c_sys_month_int,
 %     \c_sys_year_int,
 %   }
-%   Copies of the information provided by \TeX{}
+%   Copies of the information provided by \TeX{}.
 %    \begin{macrocode}
+%<*initex>
 \int_const:Nn \c_sys_minute_int
   { \int_mod:nn { \tex_time:D } { 60 } }
 \int_const:Nn \c_sys_hour_int
@@ -179,6 +180,16 @@
 \int_const:Nn \c_sys_day_int   { \tex_day:D }
 \int_const:Nn \c_sys_month_int { \tex_month:D }
 \int_const:Nn \c_sys_year_int  { \tex_year:D }
+%</initex>
+%<*package>
+\int_const:Nn \c_sys_minute_int
+  { \int_mod:nn { \tex_primitive:D \time } { 60 } }
+\int_const:Nn \c_sys_hour_int
+  { \int_div_truncate:nn { \tex_primitive:D \time } { 60 } }
+\int_const:Nn \c_sys_day_int   { \tex_primitive:D \day }
+\int_const:Nn \c_sys_month_int { \tex_primitive:D \month }
+\int_const:Nn \c_sys_year_int  { \tex_primitive:D \year }
+%</package>
 %    \end{macrocode}
 % \end{variable}
 %
