--- a/l3experimental/l3draw/l3draw-code.tex
+++ b/l3experimental/l3draw/l3draw-code.tex
@@ -39,6 +39,7 @@ for those people who are interested.
 \clist_gput_right:Nn \g_docinput_clist
   {
     l3draw.dtx            ,
+    l3draw-boxes.dtx      ,
     l3draw-paths.dtx      ,
     l3draw-points.dtx     ,
     l3draw-scopes.dtx     ,
