--- a/l3experimental/l3draw/l3draw.dtx
+++ b/l3experimental/l3draw/l3draw.dtx
@@ -1094,6 +1094,41 @@
 %   This assignment is local.
 % \end{function}
 %
+% \subsection{Layers}
+%
+% Drawing layers may be used to alter the way in which elements are stacked
+% on top of one another. In particular, they are useful when the nature of
+% an element depends on another, but where it needs to be behind it's
+% \enquote{parent}. A classic example is a filled background: this needs to
+% know the size of the material it is behind.
+%
+% All drawings feature a layer called |main|. This layer should always be
+% present, and is the one which \enquote{non-layered} content is added to.
+%
+% \begin{function}{\draw_layer_new:n}
+%   \begin{syntax}
+%     \cs{draw_layer_new:n} \Arg{layer}
+%   \end{syntax}
+%   Creates a new \meta{layer} which can then be used in drawing. The layer
+%   |main| is pre-defined.
+% \end{function}
+%
+% \begin{function}{\draw_layer_begin:n, \draw_layer_end:}
+%   \begin{syntax}
+%     \cs{draw_layer_begin:n} \Arg{layer}
+%     ...
+%     \cs{draw_layer_end:}
+%   \end{syntax}
+%   Begin and end collection of material for the \meta{layer}, which should
+%   previously have been created (and which cannot be |main|). Material
+%   collected for the layer is available globally within the current drawing.
+% \end{function}
+%
+% \begin{variable}{\l_draw_layers_clist}
+%   The list of active layers: may be given anywhere before \cs{draw_end:}.
+%   The |main| layer should always be included.
+% \end{variable}
+%
 % \end{documentation}
 %
 % \begin{implementation}
