Set key inheritance (foxes #535)

--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -2334,6 +2334,7 @@
         \@@_trim_spaces:n {#2}
       }
     \tl_clear:N \l_@@_module_tl
+    \tl_clear:N \l_@@_inherit_tl
     \exp_after:wN \@@_find_key_module:NNw
       \exp_after:wN \l_@@_module_tl
       \exp_after:wN \l_keys_key_tl
