--- a/l3experimental/l3draw/l3draw-boxes.dtx
+++ b/l3experimental/l3draw/l3draw-boxes.dtx
@@ -136,14 +136,13 @@
     \group_begin:
       \hbox_set:Nn \l_@@_tmp_box
         { \coffin_typeset:Nnnnn #1 {#2} {#3} { 0pt } { 0pt } }
-      \exp_args:NNffff \@@_box_use:Nnnnn \l_@@_tmp_box
-        { \dim_eval:n { \box_wd:N \l_@@_tmp_box - \coffin_wd:N #1 } }
-        { \dim_eval:n { -\box_dp:N \l_@@_tmp_box } }
-        { \dim_eval:n { \box_wd:N \l_@@_tmp_box } }
-        { \dim_eval:n { \box_ht:N \l_@@_tmp_box } }
+      \@@_box_use:Nnnnn \l_@@_tmp_box
+        { \box_wd:N \l_@@_tmp_box - \coffin_wd:N #1 }
+        { -\box_dp:N \l_@@_tmp_box }
+        { \box_wd:N \l_@@_tmp_box }
+        { \box_ht:N \l_@@_tmp_box }
     \group_end:
   }
-\exp_args_generate:n { Nffff }
 %    \end{macrocode}
 % \end{macro}
 %
