review docs to mention e-type expansion where relevant
(may have missed some cases)

[ci skip]

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -163,7 +163,7 @@
 %      Create a new function with the \texttt{protected} restriction,
 %      such as \cs{cs_set_protected:Npn}. The parameter may contain
 %      \cs{par} tokens but the function will not expand within an
-%      \texttt{x}-type expansion.
+%      \texttt{x}-type or \texttt{e}-type expansion.
 % \end{description}
 %
 % Finally, the functions in
@@ -244,7 +244,7 @@
 %   \emph{etc.}) will be replaced by those absorbed by the function.
 %   When the \meta{function} is used the \meta{parameters} absorbed
 %   cannot contain \cs{par} tokens. The \meta{function} will not
-%   expand within an \texttt{x}-type argument. The definition is global
+%   expand within an \texttt{x}-type or \texttt{e}-type argument. The definition is global
 %   and an error results if the \meta{function} is already defined.
 % \end{function}
 %
@@ -289,7 +289,7 @@
 %   \emph{etc.}) will be replaced by those absorbed by the function.
 %   The assignment of a meaning to the \meta{function} is restricted to
 %   the current \TeX{} group level. The \meta{function} will
-%   not expand within an \texttt{x}-type argument.
+%   not expand within an \texttt{x}-type or \texttt{e}-type argument.
 % \end{function}
 %
 % \begin{function}
@@ -307,7 +307,7 @@
 %   cannot contain \cs{par} tokens. The assignment of a meaning
 %   to the \meta{function} is restricted to the current \TeX{} group
 %   level. The \meta{function} will not expand within an
-%   \texttt{x}-type argument.
+%   \texttt{x}-type or \texttt{e}-type argument.
 % \end{function}
 %
 % \begin{function}{\cs_gset:Npn, \cs_gset:cpn, \cs_gset:Npx, \cs_gset:cpx}
@@ -353,7 +353,7 @@
 %   The assignment of a meaning to the \meta{function} is \emph{not}
 %   restricted to the current \TeX{} group level: the assignment is
 %   global. The \meta{function} will not expand within an
-%   \texttt{x}-type argument.
+%   \texttt{x}-type or \texttt{e}-type argument.
 % \end{function}
 %
 % \begin{function}
@@ -441,7 +441,7 @@
 %   (|#1|, |#2|, \emph{etc.}) will be replaced by those absorbed by the
 %   function.  When the \meta{function} is used the \meta{parameters}
 %   absorbed cannot contain \cs{par} tokens. The \meta{function} will not
-%   expand within an \texttt{x}-type argument. The definition is global and
+%   expand within an \texttt{x}-type or \texttt{e}-type argument. The definition is global and
 %   an error results if the \meta{function} is already defined.
 % \end{function}
 %
@@ -512,7 +512,7 @@
 %   (|#1|, |#2|, \emph{etc.}) will be replaced by those absorbed by the
 %   function.  When the \meta{function} is used the \meta{parameters}
 %   absorbed cannot contain \cs{par} tokens. The \meta{function} will not
-%   expand within an \texttt{x}-type argument.
+%   expand within an \texttt{x}-type or \texttt{e}-type argument.
 %   The assignment of a meaning to the \meta{function} is restricted to
 %   the current \TeX{} group level.
 % \end{function}
@@ -581,7 +581,7 @@
 %   (|#1|, |#2|, \emph{etc.}) will be replaced by those absorbed by the
 %   function.  When the \meta{function} is used the \meta{parameters}
 %   absorbed cannot contain \cs{par} tokens. The \meta{function} will not
-%   expand within an \texttt{x}-type argument.
+%   expand within an \texttt{x}-type or \texttt{e}-type argument.
 %   The assignment of a meaning to the \meta{function} is global.
 % \end{function}
 %
@@ -794,7 +794,7 @@
 %   of category code $10$. The result does \emph{not} include
 %   the current escape token, contrarily to \cs{token_to_str:N}.
 %   Full expansion of this function requires exactly $2$ expansion
-%   steps, and so an \texttt{x}-type expansion, or two
+%   steps, and so an \texttt{x}-type or \texttt{e}-type expansion, or two
 %   \texttt{o}-type expansions are required to
 %   convert the \meta{control sequence} to a sequence of characters
 %   in the input stream. In most cases, an \texttt{f}-expansion
