--- a/l3kernel/l3clist.dtx
+++ b/l3kernel/l3clist.dtx
@@ -1,7 +1,7 @@
 % \iffalse meta-comment
 %
 %% File: l3clist.dtx
-% 
+%
 % Copyright (C) 2004-2011 Frank Mittelbach, The LaTeX3 Project
 %           (C) 2012-2019 The LaTeX3 Project
 %
@@ -337,7 +337,7 @@
 %   \begin{texnote}
 %     The result is returned within \tn{unexpanded}, which means that the
 %     comma list does not expand further when appearing in an
-%     \texttt{x}-type argument expansion.
+%     \texttt{x}-type or \texttt{e}-type argument expansion.
 %   \end{texnote}
 % \end{function}
 %
