--- a/l3kernel/l3expan.dtx
+++ b/l3kernel/l3expan.dtx
@@ -713,7 +713,7 @@
 %     \cs{exp_not:o} \Arg{tokens}
 %   \end{syntax}
 %   Expands the \meta{tokens} once, then prevents any further expansion
-%   in |x|-type arguments using \cs{exp_not:n}.
+%   in |x|-type or \texttt{e}-type arguments using \cs{exp_not:n}.
 % \end{function}
 %
 % \begin{function}[EXP]{\exp_not:V}
@@ -721,7 +721,7 @@
 %     \cs{exp_not:V} \meta{variable}
 %   \end{syntax}
 %   Recovers the content of the \meta{variable}, then prevents expansion
-%   of this material in |x|-type arguments using \cs{exp_not:n}.
+%   of this material in |x|-type or \texttt{e}-type arguments using \cs{exp_not:n}.
 % \end{function}
 %
 % \begin{function}[EXP]{\exp_not:v}
@@ -732,7 +732,7 @@
 %   converts this into a control sequence which should be a \meta{variable}
 %   name.
 %   The content of the \meta{variable} is recovered, and further
-%   expansion in |x|-type arguments is prevented using \cs{exp_not:n}.
+%   expansion in |x|-type or \texttt{e}-type arguments is prevented using \cs{exp_not:n}.
 %   \begin{texnote}
 %     Protected macros that appear in a \texttt{v}-type argument are
 %     expanded despite being protected; \cs{exp_not:n} also has no
@@ -759,7 +759,7 @@
 %   Expands \meta{tokens} fully until the first unexpandable token is
 %   found (if it is a space it is removed). Expansion then stops, and
 %   the result of the expansion (including any tokens which were not
-%   expanded) is protected from further expansion in |x|-type arguments
+%   expanded) is protected from further expansion in |x|-type or \texttt{e}-type arguments
 %   using \cs{exp_not:n}.
 % \end{function}
 %
