Use "noTF" markup [ci skip]
At least in the cases where there is not a large
section on branching functions.

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -592,8 +592,7 @@
 %   \cs{l_file_search_path_seq}.
 % \end{function}
 %
-% \begin{function}[added = 2019-01-16, updated = 2019-02-16]{\file_get:nnN}
-% \begin{function}[TF, added = 2019-01-16]{\file_get:nnN}
+% \begin{function}[noTF, added = 2019-01-16, updated = 2019-02-16]{\file_get:nnN}
 %   \begin{syntax}
 %     \cs{file_get:nnN} \Arg{filename} \Arg{setup} \meta{tl}
 %     \cs{file_get:nnNTF} \Arg{filename} \Arg{setup} \meta{tl} \Arg{true code} \Arg{false code}
@@ -605,7 +604,6 @@
 %   not found. The branching version runs the \meta{true code} after the
 %   assignment to \meta{tl} if the file is found, and \meta{false code}
 %   otherwise.
-% \end{function}
 % \end{function}
 %
 % \begin{function}[updated = 2017-06-26]
