Update \file_get_... functions to have TF versions (see #538)

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -340,9 +340,10 @@
 %
 % \section{Additions to \pkg{l3file}}
 %
-% \begin{function}[added = 2017-07-11]{\file_get_mdfive_hash:nN}
+% \begin{function}[noTF, added = 2017-07-11, updates = 2019-02-16]
+%   {\file_get_mdfive_hash:nN}
 %   \begin{syntax}
-%     \cs{file_get_mdfive_hash:nN} \Arg{file name} \meta{str var}
+%     \cs{file_get_mdfive_hash:nN} \Arg{file name} \meta{tl var}
 %   \end{syntax}
 %   Searches for \meta{file name} using the current \TeX{} search
 %   path and the additional paths controlled by \cs{file_path_include:n}.
@@ -355,9 +356,10 @@
 %   Where the file is not found, the \meta{str var} will be empty.
 % \end{function}
 %
-% \begin{function}[added = 2017-07-09]{\file_get_size:nN}
+% \begin{function}[noTF, added = 2017-07-09, updates = 2019-02-16]
+%   {\file_get_size:nN}
 %   \begin{syntax}
-%     \cs{file_get_size:nN} \Arg{file name} \meta{str var}
+%     \cs{file_get_size:nN} \Arg{file name} \meta{tl var}
 %   \end{syntax}
 %   Searches for \meta{file name} using the current \TeX{} search
 %   path and the additional paths controlled by \cs{file_path_include:n}.
@@ -366,9 +368,10 @@
 %   This is not available in older versions of \XeTeX{}.
 % \end{function}
 %
-% \begin{function}[added = 2017-07-09]{\file_get_timestamp:nN}
+% \begin{function}[noTF, added = 2017-07-09, updates = 2019-02-16]
+%   {\file_get_timestamp:nN}
 %   \begin{syntax}
-%     \cs{file_get_timestamp:nN} \Arg{file name} \meta{str var}
+%     \cs{file_get_timestamp:nN} \Arg{file name} \meta{tl var}
 %   \end{syntax}
 %   Searches for \meta{file name} using the current \TeX{} search
 %   path and the additional paths controlled by \cs{file_path_include:n}.
@@ -2234,44 +2237,63 @@
 %   coverage varies in other engines.
 %    \begin{macrocode}
 \cs_new_protected:Npn \file_get_mdfive_hash:nN #1#2
-  { \@@_get_details:nnN {#1} { mdfivesum } {#2} }
+  { \file_get_mdfive_hash:nNF {#1} #2 { \tl_set:Nn #2 { \q_no_value } } }
 \cs_new_protected:Npn \file_get_size:nN #1#2
-  { \@@_get_details:nnN {#1} { size } {#2} }
+  { \file_get_size:nNF {#1} #2 { \tl_set:Nn #2 { \q_no_value } } }
 \cs_new_protected:Npn \file_get_timestamp:nN #1#2
+  { \file_get_timestamp:nNF {#1} #2 { \tl_set:Nn #2 { \q_no_value } } }
+\prg_new_protected_conditional:Npnn \file_get_mdfive_hash:nN #1#2 { T , F , TF }
+  { \@@_get_details:nnN {#1} { mdfivesum } {#2} }
+\prg_new_protected_conditional:Npnn \file_get_size:nN #1#2 { T , F , TF }
+  { \@@_get_details:nnN {#1} { size } {#2} }
+\prg_new_protected_conditional:Npnn \file_get_timestamp:nN #1#2 { T , F , TF }
   { \@@_get_details:nnN {#1} { moddate } {#2} }
 \cs_new_protected:Npn \@@_get_details:nnN #1#2#3
   {
-    \file_get_full_name:nN {#1} \l_@@_full_name_str
-    \str_set:Nx #3
+    \file_get_full_name:nNTF {#1} \l_@@_full_name_tl
       {
-        \use:c { tex_file #2 :D } \exp_after:wN
-          { \l_@@_full_name_str }
+        \tl_set:Nx #3
+          {
+            \use:c { tex_file #2 :D } \exp_after:wN
+              { \l_@@_full_name_tl }
+          }
+        \prg_return_true:  
       }
+      { \prg_return_false: }
   }
 \sys_if_engine_luatex:TF
   {
     \cs_set_protected:Npn \@@_get_details:nnN #1#2#3
       {
-        \file_get_full_name:nN {#1} \l_@@_full_name_str
-        \str_set:Nx #3
+        \file_get_full_name:nNTF {#1} \l_@@_full_name_tl
           {
-            \lua_now:e
+            \tl_set:Nx #3
               {
-                l3kernel.file#2
-                  ( " \lua_escape:e { \l_@@_full_name_str } " )
+                \lua_now:e
+                  {
+                    l3kernel.file#2
+                      ( " \lua_escape:e { \l_@@_full_name_tl } " )
+                  }
               }
+            \prg_return_true:
           }
-       }
+          { \prg_return_false: }
+      }
   }
   {
-    \cs_set_protected:Npn \file_get_mdfive_hash:nN #1#2
+    \prg_set_protected_conditional:Npnn \file_get_mdfive_hash:nN #1#2
+      { T , F ,  TF }
       {
-        \file_get_full_name:nN {#1} \l_@@_full_name_str
-        \tl_set:Nx #2
+        \file_get_full_name:nNTF {#1} \l_@@_full_name_tl
           {
-            \tex_mdfivesum:D file \exp_after:wN
-              { \l_@@_full_name_str }
+            \tl_set:Nx #2
+              {
+                \tex_mdfivesum:D file \exp_after:wN
+                  { \l_@@_full_name_tl }
+              }
+            \prg_return_true:
           }
+          { \prg_return_false: }
       }
     \cs_if_exist:NF \tex_filesize:D
       {
@@ -2281,6 +2303,7 @@
             \__kernel_msg_error:nnx
               { kernel } { primitive-not-available }
               { \exp_not:c { (pdf)file #2 } }
+            \prg_return_false:
           }
       }
   }
@@ -2301,16 +2324,14 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \file_if_exist_input:n #1
   {
-    \file_get_full_name:nN {#1} \l_@@_full_name_str
-    \str_if_empty:NF \l_@@_full_name_str
-      { \@@_input:V \l_@@_full_name_str }
+    \file_get_full_name:nNT {#1} \l_@@_full_name_tl
+      { \@@_input:V \l_@@_full_name_tl }
   }
 \cs_new_protected:Npn \file_if_exist_input:nF #1#2
   {
-    \file_get_full_name:nN {#1} \l_@@_full_name_str
-    \str_if_empty:NTF \l_@@_full_name_str
+    \file_get_full_name:nNTF {#1} \l_@@_full_name_tl
+      { \@@_input:V \l_@@_full_name_tl }
       {#2}
-      { \@@_input:V \l_@@_full_name_str }
   }
 %    \end{macrocode}
 % \end{macro}
