--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -600,23 +600,25 @@
 %   Defines \meta{tl} to the contents of \meta{filename}.
 %   Category codes may need to be set appropriately via the \meta{setup}
 %   argument.
-%   The non-branching verson sets teh \meta{tl} to |\q_no_value| if the file is
+%   The non-branching version sets theg \meta{tl} to |\q_no_value| if the file is
 %   not found. The branching version runs the \meta{true code} after the
 %   assignment to \meta{tl} if the file is found, and \meta{false code}
 %   otherwise.
 % \end{function}
 %
-% \begin{function}[updated = 2017-06-26]
+% \begin{function}[noTF, updated = 2019-02-16]
 %   {\file_get_full_name:nN, \file_get_full_name:VN}
 %   \begin{syntax}
-%     \cs{file_get_full_name:nN} \Arg{file name} \meta{str var}
+%     \cs{file_get_full_name:nN} \Arg{file name} \meta{tl}
+%     \cs{file_get_full_name:nNTF} \Arg{file name} \meta{tl} \Arg{true code} \Arg{false code}
 %   \end{syntax}
 %   Searches for \meta{file name} in the path as detailed for
-%   \cs{file_if_exist:nTF}, and if found sets the \meta{str var} the
+%   \cs{file_if_exist:nTF}, and if found sets the \meta{tl var} the
 %   fully-qualified name of the file, \emph{i.e.}~the path and file name.
 %   This includes an extension |.tex| when the given \meta{file name}
 %   has no extension but the file found has that extension.
-%   If the file is not found then the \meta{str var} is empty.
+%   In the non-branching version, the \meta{tl var} will be set to
+%   |\q_no_value| in the case that the file does not exist.
 % \end{function}
 %
 % \begin{function}[added = 2017-06-23, updated = 2017-06-26]
@@ -781,10 +783,10 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{variable}{\l_@@_file_name_str}
+% \begin{variable}{\l_@@_file_name_tl}
 %   Data storage.
 %    \begin{macrocode}
-\str_new:N \l_@@_file_name_str
+\tl_new:N \l_@@_file_name_tl
 %    \end{macrocode}
 % \end{variable}
 %
@@ -796,13 +798,12 @@
 %    \begin{macrocode}
 \prg_new_protected_conditional:Npnn \ior_open:Nn #1#2 { T , F , TF }
   {
-    \file_get_full_name:nN {#2} \l_@@_file_name_str
-    \str_if_empty:NTF \l_@@_file_name_str
-      { \prg_return_false: }
+    \file_get_full_name:nNTF {#2} \l_@@_file_name_tl
       {
-        \__kernel_ior_open:No #1 \l_@@_file_name_str
+        \__kernel_ior_open:No #1 \l_@@_file_name_tl
         \prg_return_true:
       }
+      { \prg_return_false: }
   }
 \prg_generate_conditional_variant:Nnn \ior_open:Nn { c } { T , F , TF }
 %    \end{macrocode}
@@ -1172,10 +1173,10 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{variable}{\l_@@_file_name_str}
+% \begin{variable}{\l_@@_file_name_tl}
 %  Data storage.
 %    \begin{macrocode}
-\str_new:N \l_@@_file_name_str
+\tl_new:N \l_@@_file_name_tl
 %    \end{macrocode}
 % \end{variable}
 %
@@ -1186,10 +1187,10 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \iow_open:Nn #1#2
   {
-    \__kernel_file_name_sanitize:nN {#2} \l_@@_file_name_str
+    \__kernel_file_name_sanitize:nN {#2} \l_@@_file_name_tl
     \iow_close:N #1
     \seq_gpop:NNTF \g_@@_streams_seq \l_@@_stream_tl
-      { \@@_open_stream:NV #1 \l_@@_file_name_str }
+      { \@@_open_stream:NV #1 \l_@@_file_name_tl }
 %<*initex>
       { \__kernel_msg_fatal:nn { kernel } { output-streams-exhausted } }
 %</initex>
@@ -1197,7 +1198,7 @@
       {
         \@@_new:N #1
         \tl_set:Nx \l_@@_stream_tl { \int_eval:n {#1} }
-        \@@_open_stream:NV #1 \l_@@_file_name_str
+        \@@_open_stream:NV #1 \l_@@_file_name_tl
       }
 %</package>
   }
@@ -2091,11 +2092,11 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}{\l_@@_base_name_str, \l_@@_full_name_str}
+% \begin{variable}{\l_@@_base_name_tl, \l_@@_full_name_tl}
 %   For storing the basename and full path whilst passing data internally.
 %    \begin{macrocode}
-\str_new:N \l_@@_base_name_str
-\str_new:N \l_@@_full_name_str
+\tl_new:N \l_@@_base_name_tl
+\tl_new:N \l_@@_full_name_tl
 %    \end{macrocode}
 % \end{variable}
 %
@@ -2143,8 +2144,6 @@
           \char_set_active_eq:NN ##1 \l_@@_internal_tl
         }
       \tl_set:Nx \l_@@_internal_tl {#1}
-      \tl_set:Nx \l_@@_internal_tl
-        { \tl_to_str:N \l_@@_internal_tl }
     \exp_args:NNNV \group_end:
     \str_set:Nn #2 \l_@@_internal_tl
   }
@@ -2193,15 +2192,14 @@
   }
 \prg_new_protected_conditional:Npnn \file_get:nnN #1#2#3 { T , F , TF }
   {
-    \file_get_full_name:nN {#1} \l_@@_full_name_str
-    \str_if_empty:NTF \l_@@_full_name_str
-      { \prg_return_false: }
+    \file_get_full_name:nNTF {#1} \l_@@_full_name_tl
       {
         \exp_args:NV \@@_get_aux:nnN
-          \l_@@_full_name_str
+          \l_@@_full_name_tl
           {#2} #3
         \prg_return_true:
       }
+      { \prg_return_false: }
   }
 \cs_new_protected:Npn \@@_get_aux:nnN #1#2#3
   {
@@ -2228,6 +2226,7 @@
 % \end{macro}
 %
 % \begin{macro}{\file_get_full_name:nN, \file_get_full_name:VN}
+% \begin{macro}[TF]{\file_get_full_name:nN, \file_get_full_name:VN}
 % \begin{macro}{\@@_get_full_name_search:nN}
 %   The way to test if a file exists is to try to open it: if it does
 %   not exist then \TeX{} reports end-of-file. A search is made
@@ -2241,7 +2240,13 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \file_get_full_name:nN #1#2
   {
-    \__kernel_file_name_sanitize:nN {#1} \l_@@_base_name_str
+    \file_get_full_name:nNF {#1} #2
+      { \tl_set:Nn #2 { \q_no_value } }
+  }
+\cs_generate_variant:Nn \file_get_full_name:nN { V }
+\prg_new_protected_conditional:Npnn \file_get_full_name:nN #1#2 { T , F , TF }
+  {
+    \__kernel_file_name_sanitize:nN {#1} \l_@@_base_name_tl
     \@@_get_full_name_search:nN { } \use:n
     \seq_map_inline:Nn \l_file_search_path_seq
       { \@@_get_full_name_search:nN { ##1 / } \seq_map_break:n }
@@ -2252,33 +2257,41 @@
           { \@@_get_full_name_search:nN { ##1 } \tl_map_break:n }
       }
 %</package>
-    \str_clear:N \l_@@_full_name_str
+    \tl_set:Nn \l_@@_full_name_tl { \q_no_value }
     \prg_break_point:
-    \str_if_empty:NF \l_@@_full_name_str
+    \quark_if_no_value:NTF \l_@@_full_name_tl
       {
-        \exp_args:NV \file_parse_full_name:nNNN \l_@@_full_name_str
+        \ior_close:N \g_@@_internal_ior
+        \prg_return_false:
+      }
+      {
+        \exp_args:NV \file_parse_full_name:nNNN \l_@@_full_name_tl
           \l_@@_dir_str \l_@@_name_str \l_@@_ext_str
         \str_if_empty:NT \l_@@_ext_str
           {
             \__kernel_ior_open:No \g_@@_internal_ior
-              { \l_@@_full_name_str .tex }
+              { \l_@@_full_name_tl .tex }
             \ior_if_eof:NF \g_@@_internal_ior
-              { \str_put_right:Nn \l_@@_full_name_str { .tex } }
+              { \tl_put_right:Nn \l_@@_full_name_tl { .tex } }
           }
+        \ior_close:N \g_@@_internal_ior
+        \tl_set_eq:NN #2 \l_@@_full_name_tl
+        \prg_return_true:
       }
-    \str_set_eq:NN #2 \l_@@_full_name_str
-    \ior_close:N \g_@@_internal_ior
   }
-\cs_generate_variant:Nn \file_get_full_name:nN { V }
+\cs_generate_variant:Nn \file_get_full_name:nNT  { V }
+\cs_generate_variant:Nn \file_get_full_name:nNF  { V }
+\cs_generate_variant:Nn \file_get_full_name:nNTF { V }
 \cs_new_protected:Npn \@@_get_full_name_search:nN #1#2
   {
     \@@_name_quote:nN
-      { \tl_to_str:n {#1} \l_@@_base_name_str }
-      \l_@@_full_name_str
-    \__kernel_ior_open:No \g_@@_internal_ior \l_@@_full_name_str
+      { \tl_to_str:n {#1} \l_@@_base_name_tl }
+      \l_@@_full_name_tl
+    \__kernel_ior_open:No \g_@@_internal_ior \l_@@_full_name_tl
     \ior_if_eof:NF \g_@@_internal_ior { #2 { \prg_break: } }
   }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 %
@@ -2290,10 +2303,9 @@
 %    \begin{macrocode}
 \prg_new_protected_conditional:Npnn \file_if_exist:n #1 { T , F , TF }
   {
-    \file_get_full_name:nN {#1} \l_@@_full_name_str
-    \str_if_empty:NTF \l_@@_full_name_str
-      { \prg_return_false: }
+    \file_get_full_name:nNTF {#1} \l_@@_full_name_tl
       { \prg_return_true: }
+      { \prg_return_false: }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -2303,9 +2315,9 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \__kernel_file_missing:n #1
   {
-    \__kernel_file_name_sanitize:nN {#1} \l_@@_base_name_str
+    \__kernel_file_name_sanitize:nN {#1} \l_@@_base_name_tl
     \__kernel_msg_error:nnx { kernel } { file-not-found }
-      { \l_@@_base_name_str }
+      { \l_@@_base_name_tl }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -2322,10 +2334,9 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \file_input:n #1
   {
-    \file_get_full_name:nN {#1} \l_@@_full_name_str
-    \str_if_empty:NTF \l_@@_full_name_str
+    \file_get_full_name:nNTF {#1} \l_@@_full_name_tl
+      { \@@_input:V \l_@@_full_name_tl }
       { \__kernel_file_missing:n {#1} }
-      { \@@_input:V \l_@@_full_name_str }
   }
 \cs_new_protected:Npn \@@_input:n #1
   {
