Use \cs in preference to verbatim [ci-skip]

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -888,7 +888,7 @@
 %   via the \meta{setup} argument, which is run just before running the
 %   \meta{shell command} (in a group).
 %   If shell escape is disabled, the \meta{tl~var} will be set to
-%   |\q_no_value| in the non-branching version.
+%   \cs{q_no_value} in the non-branching version.
 %   Note that quote characters (|"|) \emph{cannot} be used inside the
 %   \meta{shell command}.  The \cs{sys_shell_get:nnNTF} conditional
 %   returns \texttt{true} if the shell is available and no quote is
