--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -193,7 +193,7 @@
 %   Also notice that if multiple lines are read to match braces
 %   then the resulting token list can contain \cs{par} tokens.
 %   In the non-branching version, where the file is not found the \meta{tl var}
-%   is set to |\q_no_value|.
+%   is set to \cs{q_no_value}.
 %   \begin{texnote}
 %     This protected macro is a wrapper around the \TeX{} primitive
 %     \tn{read}.  Regardless of settings, \TeX{} replaces trailing space
@@ -229,7 +229,7 @@
 %   results in a token list |a b  c| with the letters |a|, |b|, and |c|
 %   having category code~12.
 %   In the non-branching version, where the file is not found the \meta{tl var}
-%   is set to |\q_no_value|.
+%   is set to \cs{q_no_value}.
 %   \begin{texnote}
 %     This protected macro is a wrapper around the \eTeX{} primitive
 %     \tn{readline}.  Regardless of settings, \TeX{} removes trailing
@@ -607,7 +607,7 @@
 %   Defines \meta{tl} to the contents of \meta{filename}.
 %   Category codes may need to be set appropriately via the \meta{setup}
 %   argument.
-%   The non-branching version sets the \meta{tl} to |\q_no_value| if the file is
+%   The non-branching version sets the \meta{tl} to \cs{q_no_value} if the file is
 %   not found. The branching version runs the \meta{true code} after the
 %   assignment to \meta{tl} if the file is found, and \meta{false code}
 %   otherwise.
@@ -625,7 +625,7 @@
 %   This includes an extension |.tex| when the given \meta{file name}
 %   has no extension but the file found has that extension.
 %   In the non-branching version, the \meta{tl var} will be set to
-%   |\q_no_value| in the case that the file does not exist.
+%   \cs{q_no_value} in the case that the file does not exist.
 % \end{function}
 %
 % \begin{function}[added = 2017-06-23, updated = 2017-06-26]
