Fixed typos [ci skip]
Fixed typos, see https://github.com/latex3/latex3/issues/541

--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -305,16 +305,16 @@
 %   Specifies that the \meta{key} path should inherit the keys listed
 %   as \meta{parents}. For example, after setting
 %   \begin{verbatim}
-%     \keys_define:n { foo } { test .code:n = \tl_show:n {#1} }
-%     \keys_define:n { } { bar .inherit:n = foo }
+%     \keys_define:nn { foo } { test .code:n = \tl_show:n {#1} }
+%     \keys_define:nn { } { bar .inherit:n = foo }
 %   \end{verbatim}
 %   setting
 %   \begin{verbatim}
-%     \keys_set:n { bar } { test = a }
+%     \keys_set:nn { bar } { test = a }
 %   \end{verbatim}
 %   will be equivalent to
 %   \begin{verbatim}
-%     \keys_set:n { foo } { test = a }
+%     \keys_set:nn { foo } { test = a }
 %   \end{verbatim}
 % \end{function}
 %
